log_output/manifests/gke/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-app
  labels:
    app: log-output-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output-app
  template:
    metadata:
      labels:
        app: log-output-app
    spec:
      volumes:
        - name: shared-log-volume
          persistentVolumeClaim:
            claimName: log-output-pvc
        - name: config-volume
          configMap:
            name: log-output-config
      containers:
        - name: app-reader
          image: log-output-reader
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: shared-log-volume
              mountPath: /usr/src/app/files
            - name: config-volume
              mountPath: /usr/src/app/config
          readinessProbe:
            httpGet:
              path: /readyz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
        - name: app-writer
          image: log-output-writer
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: shared-log-volume
              mountPath: /usr/src/app/files
