log_output/manifests/gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  labels:
    app: log-output-app
spec:
  type: ClusterIP
  selector:
    app: log-output-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
